--- a/client/client/package.json
+++ b/client/client/package.json
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "antd": "^5.23.3",
+    "antd": "^5.24.5",
     "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
+    "recharts": "^2.15.1",
     "sweetalert2": "^11.15.10"
   },
   "devDependencies": {
