--- a/client/client/package.json
+++ b/client/client/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.24.5",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
