--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express-rate-limit": "^7.5.0",
     "gitignore": "^0.7.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.9.5",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
